Conditional Test Works

--- a/platformio.ini
+++ b/platformio.ini
@@ -20,11 +20,14 @@ test_testing_command =
 test_ignore = mocked/*
 
 [env:disco_test]
+;mock env
 platform = ststm32
 board = disco_f072rb
 framework = zephyr
 test_ignore = integration
+; compliler configs
 build_flags =
+; use this flag for the tests
     -DTESTING_ENV
 platform_packages =
     platformio/tool-renode
