--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:disco_f072rb]
-platform = ststm32
+platform = ststm32@16.1.0
 board = disco_f072rb
 framework = zephyr
 platform_packages =
@@ -21,7 +21,7 @@ test_ignore = mocked/*
 
 [env:disco_test]
 ;mock env
-platform = ststm32
+platform = ststm32@16.1.0
 board = disco_f072rb
 framework = zephyr
 test_ignore = integration
